[workspace]
members = [".", "tests"]

[package]
name = "rs-pkg"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
crossbeam-channel = "0.5.15"
duration-str = "0.17.0"
log = "0.4.27"
oneshot = "0.1.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "tracing"] }
