[workspace]
members = [".", "tests"]

[package]
name = "rs-pkg"
version = "0.0.2"
edition = "2024"
description = "rust pkg for programming"
repository = "https://github.com/CrazyThursdayV50/rs-pkg"
readme = "README.md"
keywords = ["pkg"]
categories = ["rust-patterns"]
license = "MIT"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
chrono = "0.4.41"
duration-str = "0.17.0"
futures-util = "0.3.31"
log = "0.4.27"
oneshot = "0.1.11"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "time", "tracing"] }
