[package]
name = "tests"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = { version = "0.8.4", features = ["ws"] }
bytes = "1.10.1"
chrono = "0.4.41"
env_logger = "0.11.8"
log = "0.4.27"
log4rs = "1.3.0"
rs-pkg = { path = "../" }
tokio = { version = "1.46.0", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
